--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ ext {
     inceptionYear = '2011'   
 }
 
-githubPages {
+gitPublish {
     repoUri = 'git@github.com:concordion/concordion-timestamp-formatter-extension.git'
-    pages {
+    branch = 'gh-pages'
+	contents {
         from 'docs'
     	
         from ('build/reports/spec/spec/concordion/ext/timestampFormatter/') {
